# server.js
@@ -1,30 +1,28 @@
 const express = require('express');
-const { catchError, notFound } = require("./middlewares/error");
+const { catchError, notFound } = require('./middlewares/error');
 const connectDB = require('./config/connect');
 const dotenv = require('dotenv');
 const cors = require('cors');
 const passport = require('passport');
 const morgan = require('morgan');
 const session = require('express-session');
-const authRoutes = require('./routes/auth');
-const userRoutes = require('./routes/user');
-const documentRoutes = require('./routes/document');
-// const helmet = require('helmet');
+const router = require('./routes')
+    // const helmet = require('helmet');
 const swaggerUI = require('swagger-ui-express');
 const path = require('path');
-
 const app = express();
+const { isAdmin, authenticationMiddleware, checkRole } = require('./middlewares/auth');
+
 dotenv.config({ path: './config/.env' });
 
 const swaggerDoc = require('./swagger.json');
 app.use(cors());
 // app.use(helmet());
-app.use(express.static(path.join(__dirname, 'public')));
+require('./config/passport')(passport);
 app.use(express.urlencoded({ extended: false }));
 app.use(express.json());
 
 
-require('./config/passport')(passport);
 
 app.use(morgan('dev'));
 //Sessions
@@ -39,11 +37,10 @@ app.use(passport.session());
 
 
 //Routes
-app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDoc));
-app.use('/api/auth', authRoutes);
-app.use('/api/admin/documents', documentRoutes);
-app.use('/api/user', userRoutes);
-
+app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerDoc));
+app.use('/api/file', authenticationMiddleware, checkRole,
+    express.static(path.join(__dirname, 'public')));
+app.use('/api', router)
 app.use(notFound);
 app.use(catchError);
 const PORT = process.env.PORT || 3000;
