# swagger.json
@@ -5,7 +5,7 @@
         "title": "My API Homework",
         "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
     },
-    "host": "localhost:3000",
+    "host": "",
     "basePath": "/",
     "tags": [{
             "name": "auth",
@@ -144,6 +144,37 @@
                 }]
             }
         },
+        "/api/admin/documents/unconfirmed/{id}": {
+            "get": {
+                "tags": [
+                    "Admin"
+                ],
+                "description": "Get list users for unassign document",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "type": "string"
+                }],
+                "responses": {
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        },
+                        "description": "Unconfirmed user list"
+                    },
+                    "404": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [{
+                    "Bearer": []
+                }]
+            }
+        },
         "/api/admin/documents/{id}/assign": {
             "post": {
                 "tags": [
@@ -178,6 +209,56 @@
                 "responses": {
                     "200": {
                         "description": "Assigned successfully.",
+                        "schema": {
+                            "$ref": "#/definitions/Confirm"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found Doc"
+                    },
+                    "400": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [{
+                    "Bearer": []
+                }]
+            }
+        },
+        "/api/admin/documents/{id}/unassign": {
+            "delete": {
+                "tags": [
+                    "Admin"
+                ],
+                "description": "Unassign document to specific users.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "userIds",
+                        "in": "body",
+                        "required": true,
+                        "type": "array",
+                        "example": {
+                            "userIds": [{
+                                    "user": "id1"
+                                },
+                                {
+                                    "user": "id2"
+                                }
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Unassigned successfully.",
                         "schema": {
                             "$ref": "#/definitions/Confirm"
                         }
@@ -350,6 +431,62 @@
                     },
                     "404": {
                         "description": "Server Failure."
+                    }
+                },
+                "security": [{
+                    "Bearer": []
+                }]
+            }
+        },
+        "/api/admin/documents/deleted": {
+            "delete": {
+                "tags": [
+                    "Document"
+                ],
+                "description": "Delete documents",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "body",
+                    "in": "body",
+                    "required": true,
+                    "type": "string"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Deleted successfuly"
+                    },
+                    "404": {
+                        "description": "Delete fail"
+                    }
+                },
+                "security": [{
+                    "Bearer": []
+                }]
+            }
+        },
+        "/api/admin/documents/restore": {
+            "patch": {
+                "tags": [
+                    "Document"
+                ],
+                "description": "Restore documents",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "body",
+                    "in": "body",
+                    "required": true,
+                    "type": "string"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Restored successfuly"
+                    },
+                    "404": {
+                        "description": "Restore fail"
                     }
                 },
                 "security": [{
